Allow metaspace to be configurable Make sure environment variables are set on all docker files