@@ -21,4 +21,6 @@ setup_tcp_initial_hosts() {
 . ${HOME}/.oldenv
 setup_tcp_initial_hosts
 
-CATALINA_OPTS="${CATALINA_OPTS} -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Duser.timezone=GMT -Xms${JVM_HEAP_SIZE} -Xmx${JVM_HEAP_SIZE} -XX:MaxMetaspaceSize=1g -XX:MetaspaceSize=1g"
+CATALINA_OPTS="${CATALINA_OPTS} -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Duser.timezone=GMT"
+CATALINA_OPTS="${CATALINA_OPTS} -Xms${JVM_HEAP_SIZE} -Xmx${JVM_HEAP_SIZE}"
+CATALINA_OPTS="${CATALINA_OPTS} -XX:MaxMetaspaceSize=${JVM_META_SIZE} -XX:MaxPermSize=${JVM_META_SIZE}"
